@@ -804,7 +804,7 @@ data/Makefile
 pixmaps/Makefile
 pixmaps/22x22/Makefile
 pixmaps/48x48/Makefile
-pixmaps/scaleable/Makefile
+pixmaps/scalable/Makefile
 src/Makefile
 src/seahorse.desktop.in
 src/seahorse-pgp-encrypted.desktop.in
