@@ -1,3 +1,13 @@
+2006-01-03  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * configure.in:
+    * libseahorse/seahorse-gtkstock.c:
+    * pixmaps/Makefile.am:
+    * pixmaps/scaleable: (moved from)
+    * pixmaps/scalable: (moved to)
+    * pixmaps/scalable/Makefile.am: Move 'scaleable' pixmaps directory 
+    to 'scalable'. Fixes bug #391700
+	
 2006-12-30  Adam Schreiber  <sadam@clemson.edu>
 
     * src/seahorse-key-properties.c: Add check for remote key.
